--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <section id="personajes">
             <h2>Perosnajes Principales y Secundarios</h2>
             <div class="galeria">
-            <img src="img3/Personajes/1.jpg"  width="150">
-            <img src="img3/Personajes/2.jpg"  width="150">
-            <img src="img3/Personajes/3.jpg"  width="150">
-            <img src="img3/Personajes/4.jpg"  width="150">
+            <img src="img3/1.jpg"  width="150">
+            <img src="img3/2.jpg"  width="150">
+            <img src="img3/3.jpg"  width="150">
+            <img src="img3/4.jpg"  width="150">
             </div>
             <ul>
                 <li><strong>El caballero:</strong>Protagonista silencioso.</li>
@@ -224,11 +224,11 @@
         <section id="zonas">
             <h2>Zonas del Juego</h2>
             <div class="galeria">
-            <img src="img3/Zonas/5.jpg"  width="150">
-            <img src="img3/Zonas/6.jpg"  width="150">
-            <img src="img3/Zonas/7.jpg"  width="150">
-            <img src="img3/Zonas/8.jpg"  width="150">
-            <img src="img3/Zonas/9.jpg"  width="150">
+            <img src="img3/5.jpg"  width="150">
+            <img src="img3/6.jpg"  width="150">
+            <img src="img3/7.jpg"  width="150">
+            <img src="img3/8.jpg"  width="150">
+            <img src="img3/9.jpg"  width="150">
             </div>
             <ul>
                 <li>Greenpath</li>
@@ -241,11 +241,11 @@
         <section id="jefes">
             <h2>Enemigos y Jefes Importantes</h2>
             <div class="galeria">
-            <img src="img3/Jefes/10.jpg" width="150">
-            <img src="img3/Jefes/11.jpg" width="150">
-            <img src="img3/Jefes/12.jpg" width="150">
-            <img src="img3/Jefes/13.jpg" width="150">
-            <img src="img3/Jefes/14.jpg" width="150">
+            <img src="img3/10.jpg" width="150">
+            <img src="img3/11.jpg" width="150">
+            <img src="img3/12.jpg" width="150">
+            <img src="img3/13.jpg" width="150">
+            <img src="img3/14.jpg" width="150">
             </div>
             <ul>
                 <li><strong>Radiance:</strong>Entidad y jefa final del juego.</li>
